--- a/cv.tex
+++ b/cv.tex
@@ -142,12 +142,15 @@
 % \end{tabularx}
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{Your Name} \\[7.5pt]
-\href{https://github.com/username}{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
-\href{https://linkedin.com/in/username}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
-\href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
-\href{mailto:email@mysite.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
-\href{tel:+000000000000}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
+\Huge{Dominic Miller} \\[7.5pt]
+\href{https://github.com/dmiller003}{\raisebox{-0.05\height}\faGithub\ } \ $|$ \ 
+\href{https://www.linkedin.com/in/dominic-casimer-miller/}{\raisebox{-0.05\height}\faLinkedin\ } \ $|$ \ 
+% \href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
+\href{mailto:miller.c.dominic@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ miller.c.dominic@gmail.com} \ $|$ \ 
+% \text{(270) 401-3456}
+{\raisebox{-0.05\height}\faMobile \ (270) 401-3456}
+
+% \href{tel:+12704013456}{\raisebox{-0.05\height}\faMobile \ (270) 401-3456} \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
